/**
 * @ Author1: Danilo Silva 113384
 * @ Author2: Tomás Fernandes 112981
 * @ Modified time: 2024-05-20 15:42:10
 */

package ex2;

public abstract class Employee {
    protected String name;
	public abstract String getName();
}
